--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "build": "cd client && npm install && npm run build"
   },
@@ -14,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "react": "^17.0.2"
   },
   "directories": {
