--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "schabrol",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1"
   },
   "directories": {
     "lib": "lib"
