--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-joi-validate": "^3.0.1",
+    "joi": "^17.4.1",
     "path": "^0.12.7"
   },
   "directories": {
